<resources>
    <string name="app_name">StudyNow</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="horario">Insira o Nome e Horário da rotina</string>
    <string name="horario1">Início:</string>
    <string name="horario2">Término:</string>
    <string name="horario3">Escolha os dias que estudará:</string>
    <string name="dia1">D</string>
    <string name="dia2">S</string>
    <string name="dia3">T</string>
    <string name="dia4">Q</string>
    <string name="dia5">Q</string>
    <string name="dia6">S</string>
    <string name="dia7">S</string>
    <string name="materia1">Matéria</string>
    <string name="descMateria">Insira as matérias que serão estudadas...</string>
    <string name="Next">Avançar</string>
    <string name="save">Salvar</string>
</resources>
